start aanmaken tribute pagina

--- a/Certificering Freecodecamp/Tributepage/index.html
+++ b/Certificering Freecodecamp/Tributepage/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" contents="width=device-width,
         initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Wazig laden</title>
+    <title>Tribute page to Netsky</title>
 </head>
 
+<!-- SVG image https://netskymusic.com/img/netsky_logo.svg -->
+
 <body>
-    <section class="bg"></section>
-    <div class="loading-text">0%</div>
-    <script src="script.js"></script>
+    <div class="content-box">
+        <div class="title">Netsky introductie</div>
+        <div class="content">
+            Netsky (IPA: /ˈnɛtskaɪ/), de artiestennaam van Boris Daenen[1] (Edegem, 22 maart 1989), is een Belgische dj en producent van drum and bass. Zijn artiestennaam is vernoemd naar een computervirus dat in de periode wanneer hij muziek begon te maken vrij
+            actief was. Het idee daarachter was dat de kans bestond dat men het virus zou downloaden, wanneer men op internet op zoek zou gaan om zijn muziek illegaal te downloaden. De naam van het virus op zich is dan weer een anagram van het computernetwerk
+            Skynet uit de Terminator-filmreeks.</div>
+    </div>
+
+
 </body>
+
 
 </html>
