--- a/Certificering Freecodecamp/Tributepage/index.html
+++ b/Certificering Freecodecamp/Tributepage/index.html
@@ -1,22 +1,62 @@
-<h1 class="title"> Boris Daenen</h1>
-<p> also known as: Netsky </p>
-<!-- The video -->
-<video autoplay muted loop id="bg-video">
-  <source src="NetskyPromo.mp4" type="video/mp4">
-</video>
+<!-- 
+[X] User Story #1: My tribute page should have an element with a corresponding id="main", which contains all other elements.
+[X] User Story #2: I should see an element with a corresponding id="title", which contains a string (i.e. text) that describes the subject of the tribute page (e.g. "Dr. Norman Borlaug").
+[X] User Story #3: I should see a div element with a corresponding id="img-div".
+[X] User Story #4: Within the img-div element, I should see an img element with a corresponding id="image".
+[X] User Story #5: Within the img-div element, I should see an element with a corresponding id="img-caption" that contains textual content describing the image shown in img-div.
+[X] User Story #6: I should see an element with a corresponding id="tribute-info", which contains textual content describing the subject of the tribute page.
+[X] User Story #7: I should see an a element with a corresponding id="tribute-link", which links to an outside site that contains additional information about the subject of the tribute page. 
+    HINT: You must give your element an attribute of target and set it to _blank in order for your link to open in a new tab (i.e. target="_blank").
+[] User Story #8: The img element should responsively resize, relative to the width of its parent element, without exceeding its original size.
+[] User Story #9: The img element should be centered within its parent element.
+ -->
+<html>
+<link rel="stylesheet" href="style.css">
+<main id='main'>
+    <header>
+        <h1 class="title"><img src="https://netskymusic.com/img/netsky_logo.svg" alt="Netsky logo"></h1>
+        <p class="subtitle"> also known as: Boris Daenen </p>
+    </header>
+    <!-- Banner image -->
+    <figure id="img-div">
+        <img id="image" src="https://content-eu-8.content-cms.com/12becebc-ce88-4f3c-844b-fed0588ae8fb/dxdam/8d/8d439f0f-39f4-42af-88c9-a644fdac6025/20220430-LA-netsky2-400x400.jpg" alt="Best song ever">
+        <figcaption id="img-caption">
+            Netsky promotional picture for his New Zealand tour.
+        </figcaption>
+    </figure>
 
-<body>
-    <div id="bannerimage"></div>
+    <body class="card">
+        <div class="card-header card-bg" id="header">
+            &nbsp;
+            <section id="tribute-info">
+                <h3 class="content card-bg card-text">Some information about Netsky:</h3>
+                <p class="card-subcontent">Netsky (pronounced as: ˈnet-skai'), the artist name of Boris Daenen, born in Edegem on the 22nd of march 1989 in Belgium. Known as a DJ and producer of Drum & Bass music.</p>
+                <p class="card-subcontent">His artistname is named after a computervirus roaming around in the period he started making music. The idea behind it was people downloading the virus when looking for illegal music. </p>
+                <p class="card-subcontent"> The name on itself is an anagram of the computernetwork Skynet from the Terminator-saga. </p>
+            </section>
+        </div>
+    </body>
 
-    <article class="content">
-        <p>
-            Netsky (IPA: /ˈnɛtskaɪ/), de artiestennaam van Boris Daenen[1] (Edegem, 22 maart 1989), is een Belgische dj en producent van drum and bass. Zijn artiestennaam is vernoemd naar een computervirus dat in de periode wanneer hij muziek begon te maken vrij
-            actief was. Het idee daarachter was dat de kans bestond dat men het virus zou downloaden, wanneer men op internet op zoek zou gaan om zijn muziek illegaal te downloaden. De naam van het virus op zich is dan weer een anagram van het computernetwerk
-            Skynet uit de Terminator-filmreeks.</p>
-    </article>
-    <button id="btn_pause_bg" onclick="pause_background()">Pause</button>
+    <body class="card">
+        <div class="card-header card-bg" id="header">
+            <h3 class="content">
+                If you've become curious about Netsky's work you can find more on him at the folowing websites:
+                <li> <a id="tribute-link" href="https://en.wikipedia.org/wiki/Netsky_(electronic_musician)" target="_blank">Wikipedia source info</a>
+                </li>
+                <li> <a id="tribute-link" href="https://netskymusic.com/" target="_blank">Official website</a>
+                </li>
+                <li> <a id="tribute-link" href="https://youtu.be/IKlgBWom45o" target="_blank">Live-performance New Zealand</a>
+                </li>
 
-</body>
+            </h3>
+        </div>
+    </body>
 
+
+    <footer>Backgroundimage info:
+        <p>"We Can Only Live Today (Puppy)" is a song by Belgian drum and bass producer Netsky, featuring vocals from Billie. The song was released on November 5, 2012 as a digital download in the United Kingdom. The song was written by Boris Daenen and
+            Billie Bentein.</p>
+    </footer>
+</main>
 
 </html>
