--- a/WWI/index.html
+++ b/WWI/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="nl">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" contents="width=device-width,
-        initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Wazig laden</title>
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width,
+        initial-scale=1.0" name="viewport"/>
+    <link href="style.css" rel="stylesheet"/>
+    <title>WWI_landingpage</title>
 </head>
 
 <body>
-    <section class="bg"></section>
-    <div class="loading-text">0%</div>
-    <script src="script.js"></script>
-</body>
+<div class="nav-container">
+    <nav class="navbar">
+        <h1 id="LogoWWI">WorldWideImporters.nl</h1>
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-menu">
+            <li><a class="nav-links" href="#">Home</a></li>
+            <li><a class="nav-links" href="#">Producten</a></li>
+            <li><a class="nav-links" href="#">Inloggen</a></li>
+            <li><a class="nav-links" href="#">Over ons</a></li>
+            <li><a class="nav-links nav-links-btn" href="#">Contact</a></li>
+        </ul>
+    </nav>
+</div>
 
+</body>
+<footer></footer>
 </html>
