--- a/WWI/index.html
+++ b/WWI/index.html
@@ -12,7 +12,7 @@
 <div class="nav-container">
     <nav class="navbar">
         <h1 id="LogoWWI">WorldWideImporters.nl</h1>
-        <div class="menu-toggle">
+        <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
@@ -26,7 +26,7 @@
         </ul>
     </nav>
 </div>
-
+<script src="script.js"></script>
 </body>
 <footer></footer>
 </html>
