--- a/WWI/index.html
+++ b/WWI/index.html
@@ -11,7 +11,11 @@
 <body>
 <div class="nav-container">
     <nav class="navbar">
-        <h1 id="LogoWWI">WorldWideImporters.nl</h1>
+        <h1 id="LogoWWI">
+            <span class="full-text" >WorldWideImporters.nl</span>
+            <span class="short-text">WWI</span>
+            </h1>
+
         <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
