--- a/WWI/hoofdpagina.html
+++ b/WWI/hoofdpagina.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8"/>
@@ -29,7 +30,10 @@
         </ul>
     </nav>
 </div>
-<script src="script.js"></script>
+
+<div>
+</div>
 </body>
+<script src="script.js"></script>
 <footer></footer>
 </html>
