--- a/Certificering Freecodecamp/Survey/index.html
+++ b/Certificering Freecodecamp/Survey/index.html
@@ -1,95 +1,15 @@
 <!DOCTYPE html>
-<!-- 
-[x] User Story #1: I can see a title with id="title" in H1 sized text.
-[x] User Story #2: I can see a short explanation with id="description" in P sized text.
-[x] User Story #3: I can see a form with id="survey-form".
-[x] User Story #4: Inside the form element, I am required to enter my name in a field with id="name".
-[x] User Story #5: Inside the form element, I am required to enter an email in a field with id="email".
-[x] User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error.
-
-[x] User Story #7: Inside the form, I can enter a number in a field with id="number".
-[x] User Story #8: If I enter non-numbers in the number input, I will see an HTML5 validation error.
-[x] User Story #9: If I enter numbers outside the range of the number input, 
-    which are defined by the min and max attributes, I will see an HTML5 validation error.
-
-[x] User Story #10: For the name, email, and number input fields inside the form 
-    I can see corresponding labels that describe the purpose of each field with the following ids: id="name-label", id="email-label", and id="number-label".
-[x] User Story #11: For the name, email, and number input fields, I can see placeholder text that gives me a description or instructions for each field.
-[x] User Story #12: Inside the form element, I can select an option from a dropdown that has a corresponding id="dropdown".
-[x] User Story #13: Inside the form element, I can select a field from one or more groups of radio buttons. Each group should be grouped using the name attribute.
-[X] User Story #14: Inside the form element, I can select several fields from a series of checkboxes, each of which must have a value attribute.
-[X] User Story #15: Inside the form element, I am presented with a textarea at the end for additional comments.
-[x] User Story #16: Inside the form element, I am presented with a button with id="submit" to submit all my inputs.
-
-
-
- -->
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" contents="width=device-width,
-        initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>SurveyPage</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Landing Page</title>
 </head>
 
 <body>
-    <div class="container">
-        <header class="header">
-            <h1 id="title" class="text-center">Student Survey form</h1>
-            <p id="description" class="description text-center">
-                Help us doing research on students in the Netherlands!
-            </p>
-        </header>
-        <form id="survey-form">
-            <!-- basic info -->
-            <label for="fname">First name:</label><br>
-            <input class=text-bar type="text" id="name" name=firstname placeholder="John" required><br>
-            <label for="lname">Last name:</label><br>
-            <input class=text-bar type="text" id="name" name=lastname placeholder="Doe" required><br>
-            <label for="fname">Email:</label><br>
-            <input class=text-bar type="email" id="email" name=email placeholder="JohnDoe@email.com" required><br>
-            <!-- dropdown -->
-            <label for="faculty">Choose your faculty</label>
-            <select class=text-bar name="faculty" id="dropdown">
-              <option value="CS">Computer Science</option>
-              <option value="Mat">Mathematics</option>
-              <option value="Bio">Biology</option>
-              <option value="Ph">Physics</option>
-            </select><br>
-            <!-- number questions-->
-            <label for="age">How old are you?</label><br>
-            <input class=text-bar type="number" id="number" name="age" min="12" max="99" placeholder="fill in your age"><br>
-            <label for="daysclass">How many days of class during the week would you like?</label><br>
-            <input class=text-bar type="number" id="daysclass" name="daysclass" min="1" max="5" placeholder="number of days."><br>
-            <!-- Radio buttons-->
-            <p>For how long would you like to participate in this research?</p><br>
-            <div class=radio_buttons>
-                <label>While being a student
-              <input type="radio" name="participation" checked/>
-            </label>
-                <label>2 semesters (1 year)
-              <input type="radio" name="participation" />
-            </label>
-                <label>1 semester
-              <input type="radio" name="participation" />
-            </label>
-            </div><br>
-            <!-- Comment section-->
-            <div class="comment-container">
-                <textarea placeholder="Any remarks or questions can be jotted down here!"></textarea>
-                </comment>
-                <!-- Checkbox-->
-                <br>
-                <label>I knowingly accept the terms in which my data will be used for this research</label>
-                <input type="checkbox" checked/><br>
-                <label>I would like to sign up for weekly updates</label>
-                <input type="checkbox" checked/><br>
-                <!-- submission-->
-                <input type="submit" value="Submit">
-        </form>
-        </div>
+
 </body>
 
 </html>
