--- a/webdev/Bootstrap5/bootstrap-sandbox/09-navbar.html
+++ b/webdev/Bootstrap5/bootstrap-sandbox/09-navbar.html
@@ -11,17 +11,101 @@
     <h1 class="mb-5">Navbar</h1>
 
     <!-- Simple Navbar -->
-
+    <nav class="navbar navbar-expand-md bg-light text-center">
+      <div class="container">
+        <a href="#" class="navbar-brand">navbar text-center</a>
+        <button
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          class="navbar-toggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <br /><br />
 
     <!-- Color Variant -->
-
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <div class="container">
+        <a href="#" class="navbar-brand">NAVBAR</a>
+        <button
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          class="navbar-toggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <br /><br />
 
     <!-- Fixed Top -->
-
+    <nav class="navbar navbar-expand-md bg-warning navbar-warning fixed-top">
+      <div class="container">
+        <a href="#" class="navbar-brand">Fixed navbar</a>
+        <button
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          class="navbar-toggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#About" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- Form In Navbar -->
-
+    <nav class="navbar navbar-expand-md bg-info">
+      <div class="container">
+        <a href="#" class="navbar-brand">form navbar</a>
+        <form role="search" class="d-flex">
+          <input type="text" class="form-control me-2">
+          <button class="btn btn-dark">Search</button>
+        </form>
+        </div>
+      </div>
+    </nav>
     <br /><br />
 
     <p>
